--- a/FastQueryStock/Views/UserControls/BuySellPriceControl.xaml
+++ b/FastQueryStock/Views/UserControls/BuySellPriceControl.xaml
@@ -3,10 +3,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" Width="200" Height="200"
+             mc:Ignorable="d" Width="150" Height="150"
             >
     <UserControl.Resources>
-        <Style x:Key="TooltipTextBlockSytle" TargetType="{x:Type TextBlock}">
+        <Style x:Key="LeftAlignmentStyle" TargetType="{x:Type TextBlock}">
+            <Setter Property="Margin" Value="0,2,0,2" />
+            <Setter Property="HorizontalAlignment" Value="Left" />
+        </Style>
+        <Style x:Key="RightAlignmentStyle" TargetType="{x:Type TextBlock}">
             <Setter Property="Margin" Value="0,2,0,2" />
             <Setter Property="HorizontalAlignment" Value="Right" />
         </Style>
