--- a/FastQueryStock/Views/UserControls/BuySellPriceControl.xaml
+++ b/FastQueryStock/Views/UserControls/BuySellPriceControl.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" Width="150" Height="150"
+             mc:Ignorable="d"
             >
     <UserControl.Resources>
         <Style x:Key="LeftAlignmentStyle" TargetType="{x:Type TextBlock}">
@@ -23,13 +23,14 @@
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="40" />
                             <ColumnDefinition Width="50" />
+                            <ColumnDefinition Width="10" />
                             <ColumnDefinition Width="50" />
                             <ColumnDefinition Width="40" />
                         </Grid.ColumnDefinitions>
-                        <TextBlock Text="{Binding BuyPrice}" Foreground="{Binding BuyPriceColor}" Background="{Binding BuyPriceBackgroundColor}"  Grid.Column="0" Style="{DynamicResource TooltipTextBlockSytle}"/>
-                        <TextBlock Text="{Binding BuyQuantity}" Foreground="{Binding BuyPriceColor}" Background="{Binding BuyPriceBackgroundColor}" Grid.Column="1" Style="{DynamicResource TooltipTextBlockSytle}"/>
-                        <TextBlock Text="{Binding SellQuantity}" Foreground="{Binding SellPriceColor}" Background="{Binding SellPriceBackgroundColor}" Grid.Column="2" Style="{DynamicResource TooltipTextBlockSytle}"/>
-                        <TextBlock Text="{Binding SellPrice}" Foreground="{Binding SellPriceColor}" Background="{Binding SellPriceBackgroundColor}" Grid.Column="3" Style="{DynamicResource TooltipTextBlockSytle}"/>
+                        <TextBlock Text="{Binding BuyPrice}" Foreground="{Binding BuyPriceColor}" Background="{Binding BuyPriceBackgroundColor}"  Grid.Column="0" Style="{DynamicResource LeftAlignmentStyle}"/>
+                        <TextBlock Text="{Binding BuyQuantity}"  Foreground="#FF646464"  Grid.Column="1" Style="{DynamicResource RightAlignmentStyle}"/>
+                        <TextBlock Text="{Binding SellQuantity}" Foreground="#FF646464"  Grid.Column="3" Style="{DynamicResource LeftAlignmentStyle}"/>
+                        <TextBlock Text="{Binding SellPrice}" Foreground="{Binding SellPriceColor}" Background="{Binding SellPriceBackgroundColor}" Grid.Column="4" Style="{DynamicResource RightAlignmentStyle}"/>
                         
                     </Grid>
                 </DataTemplate>
