--- a/FastQueryStock/Views/BuySellPricePanel.xaml
+++ b/FastQueryStock/Views/BuySellPricePanel.xaml
@@ -7,7 +7,8 @@
         xmlns:local="clr-namespace:FastQueryStock.Views"
         xmlns:userControl="clr-namespace:FastQueryStock.Views.UserControls"
         mc:Ignorable="d"
-        Title="{Binding Title}" Height="300" Width="400">
+        Title="{Binding Title}" Height="170" Width="230"
+        Closed="BuySellPricePanel_Closed">
 
     <MahControls:MetroWindow.Resources>
         <ResourceDictionary>
@@ -38,6 +39,6 @@
                 </BeginStoryboard>
             </EventTrigger>
         </Grid.Triggers>
-        <userControl:BuySellPriceControl x:Name="stockValueChart" DataContext="{Binding PriceListViewModel}"/>
+        <userControl:BuySellPriceControl x:Name="stockValueChart" DataContext="{Binding PriceListViewModel}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
     </Grid>
 </MahControls:MetroWindow >
