--- a/FastQueryStock/App.xaml
+++ b/FastQueryStock/App.xaml
@@ -4,6 +4,12 @@
              xmlns:local="clr-namespace:FastQueryStock"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Asserts\Resource\ControlResource.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+
     </Application.Resources>
 </Application>
